# opos

./: Makefile  README.md  pyproject.toml  technical.md
.github/workflows/: ci.yml
docs/: changelog.md  compiler-guide.md  execution-modes.md  field-reference.md
samples/pipespecs/: README.md
samples/pipespecs/invalid_compile/: comp001_unknown_executor.json  comp003_missing_component_name.json  comp004_missing_component_category.json  comp006_missing_io_kind.json  comp007_missing_integration_id.json  comp008_bad_version.json  comp009_empty_components.json  comp010_missing_pipeline_name.json  comp011_missing_pipeline_description.json
samples/pipespecs/invalid_semantic/: sem001_missing_entrypoint_component.json  sem002_edge_unknown_target.json  sem004_missing_declared_integration.json  sem008_sequential_branching.json  sem009_schedule_without_cron.json
samples/pipespecs/valid/: ok_notifier.json  ok_parallel_like_dag.json  ok_sequential.json
spec/: opos-spec-v1.md  opos_schema_v1.json  pipespec_profile_v1.json
spec/examples/opos/: airvisual_pipeline.opos.yaml  digital_marketing_pipeline.opos.yaml  pm25_alert_pipeline.opos.yaml
spec/mappings/: pipespec_to_opos_v1.json
src/opos_validator/: __init__.py
src/opos_validator/adapters/: __init__.py  interface.py  invariants.py  registry.py  stubs.py
src/opos_validator/cli/: compile.py  diff.py  validate.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_compiler.py  test_diff.py  test_golden.py  test_profile_and_mapping.py  test_semantic_strict.py  test_validation.py
tools/: golden.py
(+17 files in other folders)
