[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opos-validator"
version = "1.0.0"
description = "OPOS v1.0 compiler, validator, and semantic diff tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "OPOS Contributors"}]
dependencies = [
  "jsonschema>=4.22.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[project.scripts]
opos-validate = "opos_validator.cli.validate:main"
opos-diff = "opos_validator.cli.diff:main"
pipespec2opos = "opos_validator.cli.compile:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
